<resources>
    <string name="app_name">UI Design</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="___time_string">6:09</string>
    <string name="health_condition_string">Health Condition</string>
    <string name="oct_string">Oct</string>
    <string name="last_update_last_month_string">Last update last month</string>
    <string name="good_string">Good</string>
    <string name="vaccine_status_string">Vaccine Status</string>
    <string name="_28_october_2019_string">28 October 2019</string>
    <string name="chickenpox_string">Chickenpox</string>
    <string name="has_verified_string">Has verified</string>
    <string name="varivax_string">VARIVAX</string>
    <string name="has_verified_ek1_string">Has verified</string>
    <string name="covid_19_string">Covid-19</string>
    <string name="sinovac_string">SINOVAC</string>
    <string name="_08_july_2022_string">08 July 2022</string>
    <string name="world_amazed_at_how_indonesia_controlling_covid_19_pandemic_string">World Amazed at How Indonesia Controlling COVID-19 Pandemic</string>
    <string name="_20_sept_string">20 Sept</string>
    <string name="david_denis_string">David Denis</string>
    <string name="covid_cases_in_indonesia_have_started_to_decrease_string">Covid cases in Indonesia have started to decrease</string>
    <string name="_20_sept_ek1_string">20 Sept</string>
    <string name="david_denis_ek1_string">David Denis</string>
    <string name="covid_cases_in_indonesia_have_started_to_decrease_ek1_string">Covid cases in Indonesia have started to decrease</string>
    <string name="_20_sept_ek2_string">20 Sept</string>
    <string name="david_denis_ek2_string">David Denis</string>
    <string name="see_all_string">See All</string>
    <string name="health_service_string">Health Service</string>
    <string name="see_all_ek1_string">See All</string>
    <string name="_6_1k_people_registed_string">6.1k people registed</string>
    <string name="consultant_appointment_string">Consultant Appointment</string>
    <string name="view_details_string">View Details</string>
    <string name="_128_participants_string">128 participants</string>
    <string name="swab___antigen_string">Swab &amp; Antigen</string>
    <string name="view_test_string">View Test</string>
    <string name="welcome_to_mysihat_string">Welcome to           MySihat</string>
    <string name="other_services_string">Other Services</string>
    <string name="see_all_ek2_string">See All</string>
    <string name="___time_ek1_string">6:09</string>
    <string name="vaccine_status_ek1_string">Vaccine Status</string>
    <string name="_28_october_2019_ek1_string">28 October 2019</string>
    <string name="chickenpox_ek1_string">Chickenpox</string>
    <string name="has_verified_ek2_string">Has verified</string>
    <string name="varivax_ek1_string">VARIVAX</string>
    <string name="has_verified_ek3_string">Has verified</string>
    <string name="covid_19_ek1_string">Covid-19</string>
    <string name="sinovac_ek1_string">SINOVAC</string>
    <string name="_08_july_2022_ek1_string">08 July 2022</string>
    <string name="see_all_ek3_string">See All</string>
    <string name="see_all_ek4_string">See All</string>
    <string name="last_update_string">Last Update</string>
    <string name="infection_disease_tracker_string">InfectionDisease Tracker</string>
    <string name="danger_string">DANGER</string>
    <string name="_10_seconds_ago_string">10 seconds ago</string>
    <string name="view____string">View >></string>
    <string name="in_collaboration_with_string">In collaboration with</string>
    <string name="medical_delivery_service_string">Medical Delivery Service</string>
    <string name="free_string">FREE</string>
    <string name="dhl_express_string">DHL Express</string>
    <string name="view____ek1_string">View >></string>
    <string name="welcome_to_mysihat_ek1_string">Welcome to           MySihat</string>
    <string name="other_services_ek1_string">Other Services</string>
    <string name="___time_ek2_string">6:09</string>
    <string name="vaccine_status_ek2_string">Vaccine Status</string>
    <string name="_28_october_2019_ek2_string">28 October 2019</string>
    <string name="chickenpox_ek2_string">Chickenpox</string>
    <string name="has_verified_ek4_string">Has verified</string>
    <string name="varivax_ek2_string">VARIVAX</string>
    <string name="has_verified_ek5_string">Has verified</string>
    <string name="covid_19_ek2_string">Covid-19</string>
    <string name="sinovac_ek2_string">SINOVAC</string>
    <string name="_08_july_2022_ek2_string">08 July 2022</string>
    <string name="other_services_ek2_string">Other Services</string>
    <string name="see_all_ek5_string">See All</string>
    <string name="see_all_ek6_string">See All</string>
    <string name="in_collaboration_with_ek1_string">In collaboration with</string>
    <string name="medical_delivery_service_ek1_string">Medical Delivery Service</string>
    <string name="free_ek1_string">FREE</string>
    <string name="dhl_express_ek1_string">DHL Express</string>
    <string name="view____ek2_string">View >></string>
    <string name="welcome_to_mysihat_ek2_string">Welcome to           MySihat</string>
    <string name="doctor_on_duty_string">Doctor on duty</string>
    <string name="personal_health_assistant_string">Personal HealthAssistant</string>
    <string name="free_ek2_string">FREE</string>
    <string name="dr__tee_yee_taung_string">Dr. Tee Yee Taung</string>
    <string name="view____ek3_string">View >></string>
    <string name="___time_ek3_string">6:09</string>
    <string name="no41__taman_mega_____string">No41, Taman Mega ...</string>
    <string name="your_location_string">Your Location</string>
    <string name="medicine_string">Medicine</string>
    <string name="hansaplast_plaster_string">Hansaplast Plaster</string>
    <string name="rm8_00_string">RM8.00</string>
    <string name="rm9_00_string">RM9.00</string>
    <string name="panadol_activefast_string">Panadol ActiveFast</string>
    <string name="value_package_string">Value Package</string>
    <string name="self_test_kit_string">Self-Test Kit</string>
    <string name="see_all_ek7_string">See All</string>
    <string name="see_all_ek8_string">See All</string>
    <string name="see_all_ek9_string">See All</string>
    <string name="value_package_1_string">Value Package 1 </string>
    <string name="rm_32_00_string">RM 32.00</string>
    <string name="rm_56_00_string"><strike>RM 56.00</strike></string>
    <string name="value_package_2_string">Value Package 2</string>
    <string name="rm43_00_string">RM43.00</string>
    <string name="rm_98_00_string"><strike>RM 98.00</strike></string>
    <string name="___time_ek4_string">6:09</string>
    <string name="health_condition_ek1_string">Health Condition</string>
    <string name="oct_ek1_string">Oct</string>
    <string name="last_update_last_month_ek1_string">Last update last month</string>
    <string name="good_ek1_string">Good</string>
    <string name="vaccine_status_ek3_string">Vaccine Status</string>
    <string name="has_verified_ek6_string">Has verified</string>
    <string name="_03_august_2010_string">03 August 2010</string>
    <string name="hepatisis_a_string">Hepatisis A</string>
    <string name="engerix_b_string">ENGERIX-B</string>
    <string name="_28_october_2019_ek3_string">28 October 2019</string>
    <string name="chickenpox_ek3_string">Chickenpox</string>
    <string name="has_verified_ek7_string">Has verified</string>
    <string name="varivax_ek3_string">VARIVAX</string>
    <string name="world_amazed_at_how_indonesia_controlling_covid_19_pandemic_ek1_string">World Amazed at How Indonesia Controlling COVID-19 Pandemic</string>
    <string name="_20_sept_ek3_string">20 Sept</string>
    <string name="david_denis_ek3_string">David Denis</string>
    <string name="covid_cases_in_indonesia_have_started_to_decrease_ek2_string">Covid cases in Indonesia have started to decrease</string>
    <string name="_20_sept_ek4_string">20 Sept</string>
    <string name="david_denis_ek4_string">David Denis</string>
    <string name="covid_cases_in_indonesia_have_started_to_decrease_ek3_string">Covid cases in Indonesia have started to decrease</string>
    <string name="_20_sept_ek5_string">20 Sept</string>
    <string name="david_denis_ek5_string">David Denis</string>
    <string name="see_all_ek10_string">See All</string>
    <string name="health_service_ek1_string">Health Service</string>
    <string name="see_all_ek11_string">See All</string>
    <string name="medical_check_up_string">Medical Check Up</string>
    <string name="view_details_ek1_string">View Details</string>
    <string name="_6_1k_people_registed_ek1_string">6.1k people registed</string>
    <string name="consultant_appointment_ek1_string">Consultant Appointment</string>
    <string name="view_details_ek2_string">View Details</string>
    <string name="days_string">days</string>
    <string name="get_for_free_string">Get for free</string>
    <string name="welcome_to_mysihat_ek3_string">Welcome to           MySihat</string>
    <string name="other_services_ek3_string">Other Services</string>
    <string name="see_all_ek12_string">See All</string>
    <string name="___time_ek5_string">6:09</string>
    <string name="days_ek1_string">days</string>
    <string name="full_name_string">Full Name</string>
    <string name="david_denis_ek6_string">David Denis</string>
    <string name="email_string">Email</string>
    <string name="wong02um_gmail_com_string">wong02um@gmail.com</string>
    <string name="phone_number_string">Phone Number</string>
    <string name="__6011_10876498_string">+6011-10876498</string>
    <string name="digital_certificate_string">Digital Certificate</string>
    <string name="medical_log_book_string">Medical Log Book</string>
    <string name="health_report_string">Health Report</string>
    <string name="days_ek2_string">days</string>
    <string name="___time_ek6_string">9:41</string>
    <string name="health_service_appointment_string">Health Service Appointment</string>
    <string name="_1600_1645_string">1600-1645</string>
    <string name="_5_4k_people_registed_string">5.4k people registed</string>
    <string name="astrazeneca_vaccine_string">AstraZeneca Vaccine</string>
    <string name="view_vaccine_string">View Vaccine</string>
    <string name="_1430_1515_string">1430-1515</string>
    <string name="_6_1k_people_registed_ek2_string">6.1k people registed</string>
    <string name="hepatitis_b_vaccine_string">Hepatitis B Vaccine</string>
    <string name="view_vaccine_ek1_string">View Vaccine</string>
    <string name="_1300_1500_string">1300-1500</string>
    <string name="doctor_tee_yee_taung_string">Doctor Tee Yee Taung</string>
    <string name="cardiology_department_string">Cardiology Department</string>
    <string name="view_details_ek3_string">View  Details</string>
    <string name="___time_ek11_string">9:41</string>
    <string name="medical_log_book_ek1_string">Medical Log Book</string>
    <string name="full_name_ek3_string">Full Name</string>
    <string name="david_denis_ek11_string">David Denis</string>
    <string name="gender_string">Gender</string>
    <string name="male_string">Male</string>
    <string name="id_number_ek2_string">ID Number</string>
    <string name="_13214325236236_ek2_string">13214325236236</string>
    <string name="blood_type_string">Blood Type</string>
    <string name="a__string">A+</string>
    <string name="type_of_vaccine_taken_string">Type of Vaccine Taken</string>
    <string name="sinovac_hpv_see_more____string">SinovacHPVSee more...</string>
    <string name="allergy_string">Allergy</string>
    <string name="seafood_string">Seafood</string>
    <string name="health_problem_string">Health Problem</string>
    <string name="___string">-</string>
    <string name="your_profile_string">Your Profile</string>
</resources>